--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
           </div>
           <!-- Button trigger modal -->
 <div class="col-xs-12 text-end">
-  <button type="button" class="btn btn-primary pt-2 pb-2 pe-4 ps-4" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  <button type="button" class="btn btn-primary pt-2 pb-2 pe-4 ps-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
    Login
   </button>
   </div>
   <!-- Modal -->
-  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal fade" id="exampleModal"   tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm opacity">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel"></h5>
+          <h5 class="modal-title" id="exampleModalLabel"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
