--- a/carousel.html
+++ b/carousel.html
@@ -25,9 +25,9 @@
   <body>
     <div class="container">
       <header class="transperent">
-        <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="index.html"
-            ><i class="bi bi-controller"></i> Game Zone</a
+        <nav class="navbar navbar-expand-lg fw-bold">
+          <a class="navbar-brand fs-1" href="index.html"
+            ><img src="./assets/imgs/4414492.png" alt=""> Game Zone</a
           >
           <button
             class="navbar-toggler"
@@ -41,15 +41,25 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto m-4">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Home</a
+                <a class="nav-link active" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" >|</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="carousel.html"
+                  >Carousel</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="carousel.html">Carousel</a>
-              </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" >|</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Add Product</a>
+            </li>
             </ul>
           </div>
           <!-- Button trigger modal -->
@@ -120,6 +130,7 @@
             </div>
           </div>
         </nav>
+        <hr class="mb-5">
       </header>
       <main>
         <h2 class="text-center">Game Zone</h2>
