--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <body>
     <div class="container">
       <header class="transperent">
-        <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="index.html"
-            ><i class="bi bi-controller"></i> Game Zone</a
+        <nav class="navbar navbar-expand-lg fw-bold">
+          <a class="navbar-brand fs-1" href="index.html"
+            ><img src="./assets/imgs/4414492.png" alt="">Game Zone</a
           >
           <button
             class="navbar-toggler"
@@ -48,12 +48,21 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto m-4">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" >|</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="carousel.html">Carousel</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" >|</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Add Product</a>
               </li>
             </ul>
           </div>
@@ -100,6 +109,7 @@
     </div>
   </div>
         </nav>
+        <hr class="mb-5">
         <!------------------------------------->
   
 
