--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HomeWork 04.08.22</title>
+    <title>Game Zone</title>
     <link
     rel="shortcut icon"
     href="./assets/imgs/icon.png"
