--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
           <i class="bi bi-funnel"></i>
         </button>
         <div style="min-height: 20px;">
-          <div class="collapse collapse-horizontal mt-2" id="collapseWidthExample">
-            <div class="card card-body" style="width: 300px;">
+          <div class="collapse collapse-horizontal mt-2 " id="collapseWidthExample">
+            <div class="card card-body" style="width: 330px;">
               <input
                 type="text"
-                class="form-control bg-dark"
+                class="form-control"
                 placeholder="Filter by name"
                 aria-label="Filter by name"
                 oninput="handleFilterByName(event)"
-                style="color: white; border: none"
+                style="color: white; border: none; background: #222;"
               />
             </div>
           </div>
