--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
         <!------------------------------------->
       </header>
       <main>
-        <h2 class="text-center">Game Zone</h2>
-        <h4 class="text-center">Find the best games in 2022!</h4>
-
+        
+        <div class="sign">
+          <div class="neon-blue" id="title">G<span id="fade">ame</span> Zone</div>
+          <div class="neon-blue"> A <span class="neon-purple" id="trav">World</span> Of <span class="neon-purple">Gaming</span></div>
+       </div>
+<br><br><br><br>
         <!---------------------------------------------->
         <div class="carousel-warpper text-center">
           <div class="carousel" id="carouselDiv"></div>
