--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
   </div>
         </nav>
-        <hr class="mb-5">
+        <div class="divider div-transparent"></div>
         <!------------------------------------->
   
 
@@ -116,7 +116,7 @@
           <div class="neon-blue" id="title">G<span id="fade">ame</span> Zone</div>
           <div class="neon-blue"> A <span class="neon-purple" id="trav">World</span> Of <span class="neon-purple">Gaming</span></div>
        </div>
-<br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <!---------------------------------------------->
         <div class="carousel-warpper text-center">
           <div class="carousel" id="carouselDiv"></div>
@@ -170,7 +170,7 @@
   
     </div>
         <!---------------------------------------------->
-   <hr />
+        <div class="divider div-transparent"></div>
    <h3 class="text-center mt-5">View other games from 2022</h3>
         <!---------------------------------------------->
 <div class="row">
