--- a/carousel.html
+++ b/carousel.html
@@ -45,21 +45,16 @@
               <li class="nav-item">
                 <a class="nav-link active" href="index.html">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" >|</a>
-              </li>
+            
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="carousel.html"
                   >Carousel</a
                 >
+                </li>
+               </li>
+                <li class="nav-item">
+               <a class="nav-link" href="#">Add Product</a>
               </li>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" >|</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Add Product</a>
-            </li>
             </ul>
           </div>
           <!-- Button trigger modal -->
@@ -130,10 +125,13 @@
             </div>
           </div>
         </nav>
-        <hr class="mb-5">
+        <div class="divider div-transparent"></div>
       </header>
       <main>
-        <h2 class="text-center">Game Zone</h2>
+        <div class="sign">
+          <div class="neon-blue" id="title">G<span id="fade">ame</span> Zone</div>
+          <div class="neon-blue"> A <span class="neon-purple" id="trav">World</span> Of <span class="neon-purple">Gaming</span></div>
+       </div>
         <h4 class="text-center">Best games in carousel</h4>
         <div class="px-wide mb-5">
           <div
