--- a/carousel.html
+++ b/carousel.html
@@ -27,7 +27,10 @@
       <header class="transperent">
         <nav class="navbar navbar-expand-lg fw-bold">
           <a class="navbar-brand fs-1" href="index.html"
-            ><img src="./assets/imgs/4414492.png" alt=""> Game Zone</a
+            > <div class="sign">
+              <div class="neon-blue" id="title">G<span id="fade">ame</span> Zone</div>
+              <div class="neon-blue"> A <span class="neon-purple" id="trav">World</span> Of <span class="neon-purple">Gaming</span></div>
+           </div></a
           >
           <button
             class="navbar-toggler"
@@ -128,10 +131,7 @@
         <div class="divider div-transparent"></div>
       </header>
       <main>
-        <div class="sign">
-          <div class="neon-blue" id="title">G<span id="fade">ame</span> Zone</div>
-          <div class="neon-blue"> A <span class="neon-purple" id="trav">World</span> Of <span class="neon-purple">Gaming</span></div>
-       </div>
+       
         <h4 class="text-center">Best games in carousel</h4>
         <div class="px-wide mb-5">
           <div
