--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./style/style.css" />
-    <link rel="stylesheet" href="./style/header.css">
+    <link rel="stylesheet" href="./style/heroSection.css">
     
   </head>
   <body>
@@ -34,7 +34,10 @@
       <header class="transperent">
         <nav class="navbar navbar-expand-lg fw-bold">
           <a class="navbar-brand fs-1" href="index.html"
-            ><img src="./assets/imgs/4414492.png" alt=""> Game Zone</a
+            >  <div class="sign">
+              <div class="neon-blue" id="title">G<span id="fade">ame</span> Zone</div>
+              <div class="neon-blue"> A <span class="neon-purple" id="trav">World</span> Of <span class="neon-purple">Gaming</span></div>
+           </div></a
           >
           <button
             class="navbar-toggler"
@@ -105,17 +108,18 @@
         </nav>
         <div class="divider div-transparent"></div>
         <!------------------------------------->
-  
-
+        <div class="head text-center">
+  <h1 class="mt-5">The Best <span>Games</span> Out There</h1>
+  <p>Find out about all new games of 2022! Here You can find links to <span>buy</span> a game or just to visits their <span>websites</span>.</p>
+  <p>You can also find <span>articles</span> on any game on the list!</p>
+</div>
 
         <!------------------------------------->
       </header>
       <main>
-        
-        <div class="sign">
-          <div class="neon-blue" id="title">G<span id="fade">ame</span> Zone</div>
-          <div class="neon-blue"> A <span class="neon-purple" id="trav">World</span> Of <span class="neon-purple">Gaming</span></div>
-       </div>
+   
+
+
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <!---------------------------------------------->
         <div class="carousel-warpper text-center">
